# offlinetranslator.koplugin

./: .gitignore  Makefile  README.md  _meta.lua  main.lua
.github/workflows/: build.yml  release.yml
native/: build-android.sh  build-linux.sh
native/bridge/: Cargo.toml  build.rs
native/bridge/src/: lib.rs  manga_ocr.rs
native/scripts/: patch-mnn-android.sh  patch-slimt-android.sh  patch-tesseract-sys.sh  prepare-translator-rs.sh
